# wmux

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  THIRD_PARTY_NOTICES  TODOS.md  decisions.md  forge.config.ts  handoff.md  install.ps1  node_modules  package-lock.json  package.json  progress.md  tsconfig.cli.json  tsconfig.harness.json  tsconfig.rig.json  vite.main.config.ts  vite.renderer.config.ts  vitest.config.ts  vitest.harness.config.ts  vitest.rig.config.ts  vitest.runtime.config.ts
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: icon.icns
bench/: README.md  baseline-ci.json  baseline-local.json  history.ndjson
chocolatey/: wmux.nuspec
core/wmux-term/: .gitignore  Cargo.toml  SPIKE-SA1.md  build.rs  build.sh  package.json  verify.sh
core/wmux-term/spike/: v1-node-napi.mjs  v2-electron-main.cjs  v4b-wasm-bench.cjs  v5-wasm-memory.cjs
core/wmux-term/spike/v3-renderer/: index.html  main.cjs  preload.cjs
core/wmux-term/src/: grid.rs  lib.rs  napi_binding.rs  wasm_binding.rs
designs/: gpui-buttons-compare.html  gpui-components-compare.html  gpui-palette-explorer.html  theme-audit.html
docs/: PROTOCOL.md  README.md  SECURITY.md  macos-autostart.md  macos-compat-plan.md  performance.md  upgrade-2026-04-17.md  upgrade-v2.9.0.md  workspace-profiles.md
plans/: RCA-daemon-session-replacement-2026-05-29.md  a2a-pane-identity-mcp-registration-IMPL.md  agent-collaboration-architecture-2026-07-03.md  agent-hook-integration.md  channel-membership-v1-design.md  cross-platform-release.md  (+34 more)
(+1337 files in other folders)
